--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/qt.png" />
+    <link rel="icon" type="image/png" href="/quick-tick/qt.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuickTick</title>
     <!-- Start Single Page Apps for GitHub Pages -->
@@ -35,8 +35,8 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <script type="module" crossorigin src="/assets/index.ea8c770e.js"></script>
-    <link rel="stylesheet" href="/assets/index.1d05952b.css">
+    <script type="module" crossorigin src="/quick-tick/assets/index.ea8c770e.js"></script>
+    <link rel="stylesheet" href="/quick-tick/assets/index.1d05952b.css">
   </head>
   <body>
     <div id="root"></div>
