--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/quick-tick/qt.png" />
+    <link rel="icon" type="image/png" href="/quick-tick/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuickTick</title>
     <!-- Start Single Page Apps for GitHub Pages -->
