--- a/quick-tick/index.html
+++ b/quick-tick/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuickTick</title>
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta
+      name="description"
+      content="Task tracking application using Google Tasks."
+    />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
